# balanceframe

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES  compose.actual.yaml  compose.yaml  docker-entrypoint.sh  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  result-bin  result-man  tsconfig.json
.cargo/: config.toml
.githooks/: commit-msg
.github/: SECURITY.md
.github/workflows/: release.yml  test.yml
apps/cli/: README.md  package.json  tsconfig.json  vitest.config.ts
apps/server/: README.md  package.json
apps/web/: .env  README.md  nuxt.config.ts  package.json  vitest.config.ts
crates/core-protocol/: Cargo.toml  README.md
crates/financial-core/: Cargo.toml  README.md
crates/node-binding/: Cargo.toml  package.json
crates/node-binding/src/: fuzz.rs  lib.rs
crates/node-binding/test/: smoke.mjs
docs/: releases.md
docs/roadmap/: overview.md
nix/: checks.nix  dev-shell.nix  release-shell.nix  release-tooling.nix  tooling.nix
protocol/fixtures/: README.md  data-quality.json  representative.json  representative.schema.json
protocol/json-schema/: README.md  protocol-v1.json
scripts/: release-assets.sh
tests/actual-integration/: 01-connection-budget.test.ts  02-sync-cache-lifecycle.test.ts  03-read-entities.test.ts  04-observe-mode.test.ts  05-disposable-bank-sync.test.ts  06-import-export.test.ts  07-concurrency.test.ts  README.md  actual-client.ts  helpers.ts  package.json  setup.ts  (+2 more)
(+124 files in other folders)
