[package]
name = "balanceframe-node-binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
balanceframe-financial-core = { path = "../financial-core" }
balanceframe-core-protocol = { path = "../core-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"
